--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -180,6 +180,7 @@ allow 171.25.193.81;
 allow 171.25.193.82;
 allow 172.104.182.84;
 allow 172.104.186.73;
+allow 172.104.243.155;
 allow 172.105.174.195;
 allow 172.105.20.12;
 allow 172.105.203.121;
@@ -917,6 +918,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -924,9 +926,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.30;
+allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1230,7 +1236,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1421,6 +1426,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
+allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1623,6 +1629,7 @@ allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
+allow 45.134.48.153;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.137.99.182;
@@ -1730,7 +1737,6 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1817,7 +1823,6 @@ allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.221.131.86;
 allow 82.221.139.190;
 allow 8.222.227.10;
 allow 83.147.17.190;
