--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -415,7 +415,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -606,6 +605,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
+allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
