--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -180,6 +180,7 @@ deny 171.25.193.81;
 deny 171.25.193.82;
 deny 172.104.182.84;
 deny 172.104.186.73;
+deny 172.104.243.155;
 deny 172.105.174.195;
 deny 172.105.20.12;
 deny 172.105.203.121;
@@ -917,6 +918,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -924,9 +926,13 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
+deny 23.191.200.28;
 deny 23.191.200.29;
+deny 23.191.200.30;
+deny 23.191.200.31;
+deny 23.191.200.4;
 deny 23.191.200.5;
-deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1230,7 +1236,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1421,6 +1426,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
+deny 2a0c:9f00:2:12fa::1;
 deny 2a0c:e300:b:b::b;
 deny 2a0d:bbc7::f816:3eff:fe0b:181b;
 deny 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1623,6 +1629,7 @@ deny 45.13.225.69;
 deny 45.13.225.78;
 deny 45.133.74.53;
 deny 45.134.225.36;
+deny 45.134.48.153;
 deny 45.137.70.158;
 deny 45.137.99.16;
 deny 45.137.99.182;
@@ -1730,7 +1737,6 @@ deny 51.89.138.51;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1817,7 +1823,6 @@ deny 82.153.138.7;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.131.71;
-deny 82.221.131.86;
 deny 82.221.139.190;
 deny 8.222.227.10;
 deny 83.147.17.190;
