--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -180,6 +180,7 @@ set_real_ip_from 171.25.193.81;
 set_real_ip_from 171.25.193.82;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.186.73;
+set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.174.195;
 set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.105.203.121;
@@ -917,6 +918,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -924,9 +926,13 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1230,7 +1236,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1421,6 +1426,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:9a40:8860:51::aa11;
+set_real_ip_from 2a0c:9f00:2:12fa::1;
 set_real_ip_from 2a0c:e300:b:b::b;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fe0b:181b;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1623,6 +1629,7 @@ set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.134.48.153;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.137.99.16;
 set_real_ip_from 45.137.99.182;
@@ -1730,7 +1737,6 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1817,7 +1823,6 @@ set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
-set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 8.222.227.10;
 set_real_ip_from 83.147.17.190;
