--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -753,7 +753,6 @@ allow 203.55.81.1;
 allow 203.55.81.2;
 allow 204.137.14.104;
 allow 204.137.14.105;
-allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.76.203.203;
@@ -798,7 +797,6 @@ allow 216.73.159.75;
 allow 216.9.224.232;
 allow 217.12.221.131;
 allow 217.182.75.199;
-allow 220.135.36.173;
 allow 23.129.64.130;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -897,7 +895,6 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -924,11 +921,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.3;
-allow 23.191.200.31;
-allow 23.191.200.5;
+allow 23.191.200.30;
+allow 23.191.200.4;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -974,7 +969,6 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1234,6 +1228,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1734,6 +1729,7 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1790,14 +1786,12 @@ allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
-allow 74.208.79.7;
 allow 74.82.47.194;
 allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
-allow 77.85.151.105;
 allow 78.142.18.219;
 allow 78.153.150.25;
 allow 78.159.131.103;
