--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -579,6 +579,7 @@ allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.26.192.177;
 allow 194.26.192.77;
+allow 194.55.167.14;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -643,7 +644,6 @@ allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
 allow 2001:41d0:701:1100::57d3;
-allow 2001:41d0:801:2000::2b97;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -895,6 +895,7 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -913,6 +914,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -921,7 +923,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.30;
+allow 23.191.200.3;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -970,6 +972,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1418,6 +1421,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:9f00:2:12fa::1;
@@ -1727,7 +1731,6 @@ allow 51.68.226.107;
 allow 5.181.177.130;
 allow 5.181.177.245;
 allow 51.81.222.62;
-allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
