--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -83,6 +83,7 @@ deny 108.59.12.41;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
+deny 109.228.160.190;
 deny 109.237.27.11;
 deny 109.69.67.17;
 deny 109.70.100.1;
@@ -137,6 +138,7 @@ deny 149.202.79.129;
 deny 149.56.44.47;
 deny 151.243.109.167;
 deny 151.243.213.150;
+deny 15.204.233.3;
 deny 152.32.206.127;
 deny 152.53.106.19;
 deny 152.53.184.161;
@@ -297,7 +299,6 @@ deny 185.196.220.38;
 deny 185.196.220.39;
 deny 185.207.107.130;
 deny 185.207.107.216;
-deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
 deny 185.220.101.100;
@@ -376,13 +377,11 @@ deny 185.220.101.22;
 deny 185.220.101.23;
 deny 185.220.101.24;
 deny 185.220.101.25;
-deny 185.220.101.26;
 deny 185.220.101.27;
 deny 185.220.101.28;
 deny 185.220.101.29;
 deny 185.220.101.3;
 deny 185.220.101.30;
-deny 185.220.101.31;
 deny 185.220.101.32;
 deny 185.220.101.33;
 deny 185.220.101.34;
@@ -391,7 +390,6 @@ deny 185.220.101.36;
 deny 185.220.101.37;
 deny 185.220.101.38;
 deny 185.220.101.39;
-deny 185.220.101.4;
 deny 185.220.101.40;
 deny 185.220.101.41;
 deny 185.220.101.42;
@@ -585,13 +583,6 @@ deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.246.231.197;
-deny 195.47.238.176;
-deny 195.47.238.177;
-deny 195.47.238.178;
-deny 195.47.238.44;
-deny 195.47.238.83;
-deny 195.47.238.86;
-deny 195.47.238.87;
 deny 195.47.238.90;
 deny 195.47.238.92;
 deny 195.80.151.242;
@@ -744,8 +735,10 @@ deny 2001:b011:4006:54d6::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
+deny 2001:df6:11c0:2726::1688;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
 deny 202.182.99.129;
+deny 202.6.204.129;
 deny 203.55.81.1;
 deny 203.55.81.2;
 deny 204.137.14.92;
@@ -891,7 +884,6 @@ deny 23.129.64.224;
 deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.248.100;
-deny 23.137.253.109;
 deny 23.137.253.113;
 deny 23.137.253.254;
 deny 23.137.253.27;
@@ -909,6 +901,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -918,7 +911,7 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
-deny 23.191.200.3;
+deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
@@ -966,10 +959,10 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
+deny 2604:2dc0:101:200::18a7;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600::4ee;
 deny 2604:a00:101:4:216:3eff:fe2f:1c84;
@@ -1274,7 +1267,6 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
-deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
@@ -1368,7 +1360,6 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
-deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
@@ -1378,8 +1369,6 @@ deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
 deny 2a0b:f4c2::30;
-deny 2a0b:f4c2::31;
-deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -1403,13 +1392,6 @@ deny 2a0b:f4c2::9;
 deny 2a0c:4d00:2:8::2;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
-deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
-deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
-deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
-deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
-deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
-deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
-deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
