--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -121,6 +121,7 @@ set_real_ip_from 2001:b011:4006:54d6::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
+set_real_ip_from 2001:df6:11c0:2726::1688;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
@@ -155,10 +156,10 @@ set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
+set_real_ip_from 2604:2dc0:101:200::18a7;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600::4ee;
 set_real_ip_from 2604:a00:101:4:216:3eff:fe2f:1c84;
@@ -462,7 +463,6 @@ set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
-set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
@@ -556,7 +556,6 @@ set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
-set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
@@ -566,8 +565,6 @@ set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
-set_real_ip_from 2a0b:f4c2::31;
-set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
 set_real_ip_from 2a0b:f4c2:4::102;
@@ -591,13 +588,6 @@ set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:4d00:2:8::2;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
-set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
-set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
-set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
-set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:9a40:8860:51::aa11;
